@@ -1,5 +1,8 @@
 2003-07-16  Jeff Hobbs  <jeffh@ActiveState.com>
 
+	* unix/tclUnixNotfy.c (NotifierThreadProc): correct size of found
+	and word vars from int to long. [Bug 767578] (hgo)
+
 	* generic/tcl.h:       add recognition of -DTCL_UTF_MAX=6 on the
 	* generic/regcustom.h: make line to support UCS-4 mode.  No config
 	arg at this time, as it is not the recommended build mode.
